# AIE7

00_Onramp/onramp06_MCP/: README.md
01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md  README.md
02_Embeddings_and_RAG/: .gitignore  Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  pyproject.toml  test_metadata_system.py
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  pyproject.toml
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb
10_Open_DeepResearch/: open-deep-research.ipynb
